[gd_scene format=3 uid="uid://d1pf0tksqtxyj"]

[ext_resource type="Script" uid="uid://blvvfylohxxy3" path="res://Scripts/rabbit.gd" id="1_rrb3y"]
[ext_resource type="Texture2D" uid="uid://cxxufibokn8no" path="res://Assets/Spritesheet/Rabbit_Brown_Idle.png" id="2_mqrgk"]
[ext_resource type="Texture2D" uid="uid://7qefinbqe7l2" path="res://Assets/Spritesheet/Rabbit_Brown_Move.png" id="3_ngq0e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2jp4"]
atlas = ExtResource("2_mqrgk")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn72i"]
atlas = ExtResource("2_mqrgk")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7c6n"]
atlas = ExtResource("2_mqrgk")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q65vi"]
atlas = ExtResource("2_mqrgk")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7yq6"]
atlas = ExtResource("3_ngq0e")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtugg"]
atlas = ExtResource("3_ngq0e")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0xep"]
atlas = ExtResource("3_ngq0e")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ixn"]
atlas = ExtResource("3_ngq0e")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueo1v"]
atlas = ExtResource("3_ngq0e")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_neb35"]
atlas = ExtResource("3_ngq0e")
region = Rect2(640, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ch8l1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2jp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn72i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7c6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q65vi")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7yq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0xep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ixn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueo1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neb35")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqyv8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqrgk"]

[sub_resource type="Curve" id="Curve_pqyv8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_mqrgk"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Rabbit" type="CharacterBody2D" unique_id=717469273 groups=["Enemy"]]
scale = Vector2(3, 3)
collision_layer = 8
collision_mask = 15
script = ExtResource("1_rrb3y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=541319906]
sprite_frames = SubResource("SpriteFrames_ch8l1")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2121019832]
position = Vector2(0, 6.15)
shape = SubResource("CircleShape2D_pqyv8")

[node name="Area" type="Area2D" parent="." unique_id=1082622122]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area" unique_id=81160246]
position = Vector2(0, 8)
scale = Vector2(1.745, 1.745)
shape = SubResource("CircleShape2D_mqrgk")

[node name="RayCastLeft" type="RayCast2D" parent="." unique_id=2122272650]
position = Vector2(-18, 0)
target_position = Vector2(0.33333206, 51.666668)
collision_mask = 4

[node name="RayCastRight" type="RayCast2D" parent="." unique_id=982493513]
position = Vector2(17, 0)
target_position = Vector2(-1, 51.333336)
collision_mask = 4

[node name="DeathParticles" type="CPUParticles2D" parent="." unique_id=140649911]
position = Vector2(-1, 15)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_pqyv8")
color_ramp = SubResource("Gradient_mqrgk")

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
